Fix Scroll events failing to bubble on Youtube page.

The problem with Youtube page in oopif is that the Body element of the
iframe is vertically scrollable by a few pixels (ClampScrollOffset doesn't
shirnk the vertical scroll delta to zero) but
UserInputScrollable(kVerticalScrollbar) is false for its scrollablearea.

This cl uses the latter function in addition to ClampScrollOffset to
calculate the clamped scroll delta in ScrollManager::CanScroll.

Bug: 809621
Test: SitePerProcessBrowserTest.ScrollBubblingFromOOPIFWithBodyOverflowHidden
Change-Id: Id7c722331bc4e65cf4808aa7bb18b3cbf3f71808
Reviewed-on: https://chromium-review.googlesource.com/905473
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539496}
Former-commit-id: 53a3545b3f538d5dcd2f159cb030cc1b578d7e60